# wsl-gpu-guard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/wsl_gpu_guard/: __init__.py  cli.py  config.py  watchdog.py
src/wsl_gpu_guard/scripts/: on-ac-disconnect.ps1
tests/: test_cli.py  test_config.py  test_watchdog.py
